--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 class="icon"onclick="location.href='https:www.linkedin.com/in/ezekiel-kimani-b8055a270'"/>
 
                 <img src="assets/github.png" alt="My GitHub Profile"
-                class="icon"onclick="location.href='https:github.com/EZYDUZIT32'"/>
+                class="icon"onclick="location.href='https://github.com/EZYDUZIT32'"/>
             </div>
         </div>
     </section>
@@ -74,7 +74,7 @@
                     <div class="details-container">
                         <img src="assets/education.png" alt="Education icon" class="icon"> 
                        <h3>Education</h3>
-                       <p>B.Sc.Applied Computing(Software Development)<br/>Diploma.Business Information Technology</p>
+                       <p>B.Sc.Applied Computing(Software-Development)<br/>Diploma.Business Information Technology</p>
                     </div>
                 </div>
                 <div class="text-container">
