--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 class="icon"onclick="location.href='https:www.linkedin.com/in/ezekiel-kimani-b8055a270'"/>
 
                 <img src="assets/github.png" alt="My GitHub Profile"
-                class="icon"onclick="location.href='https://github.com/EZYDUZIT32'"/>
+                class="icon"onclick="location.href='https:github.com/EZYDUZIT32'"/>
             </div>
         </div>
     </section>
