--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h1 class="title">Ezekiel Kimani</h1>
             <p class="section__text_p2">Software Developer</p>
             <div class="btn-container">
-                <button class="btn btn-color-2"onclick="window.open('assets/My-Resume.pdf')">Download CV</button>
+                <button class="btn btn-color-2"onclick="window.open('assets/MYRESUME.pdf')">Download CV</button>
                 <button class="btn btn-color-1"onclick="location.href='#contact'">Contact Info</button>
             </div>
             <div class="Socials-container">
