--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <div class="section__text">
             <p class="section__text_p1"> Hello, I'm</p>
             <h1 class="title">Ezekiel Kimani</h1>
-            <p class="section__text_p2">Software Developer</p>
+            <p class="section__text_p2">Software Engineer</p>
             <div class="btn-container">
-                <button class="btn btn-color-2"onclick="window.open('assets/MYRESUME.pdf')">Download CV</button>
+                <button class="btn btn-color-2"onclick="window.open('assets/MYMY.pdf')">Download CV</button>
                 <button class="btn btn-color-1"onclick="location.href='#contact'">Contact Info</button>
             </div>
             <div class="Socials-container">
